--- a/style.css
+++ b/style.css
@@ -11,8 +11,18 @@ justify-content: space-between;
 padding: 20px;
 }
 
+.cabecalho_menuitem{
 
+display: inline;
+text-transform: uppercase;
+margin-left: 20px;
+}
 
+.cacalho_imagem{
+width: 200px;
+height: 200px;
+border-radius: 50%;
+}
 
 
 
