--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ text-transform: uppercase;
 margin-left: 20px;
 }
 
-.cacalho_imagem{
+.cabecalho_imagem{
 width: 200px;
 height: 200px;
 border-radius: 50%;
